# pixiv-powerful-viewer-gtk

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/lib/: collection.rs  mod.rs  work.rs
src/models/: mod.rs  pixiv_response.rs  pixiv_work_metadata.rs  pixiv_work_page.rs  work.rs  work_metadata.rs
src/objects/: list_item_state.rs  mod.rs
src/resources/: application_window.ui  collection_view.ui  explorer_panel.ui  ppv.gresource.xml  preview_panel.ui  resources.gresource.xml  window.ui  work_card.ui
src/utils/: mod.rs  pixiv_api.rs  serde.rs
src/widgets/: application_window.rs  collection_view.rs  explorer_panel.rs  mod.rs  preview_panel.rs  work_card.rs
src/widgets/application_window/: imp.rs  mod.rs
src/widgets/collection_view/: imp.rs  mod.rs
src/widgets/explorer_panel/: imp.rs  mod.rs
src/widgets/preview_panel/: imp.rs  mod.rs
src/widgets/window/: imp.rs  mod.rs
